@@ -1,3 +1,5 @@
+Added add new panel "Friction", with radio buttons side by side each other "On", "Off" after the "Vectors" panel 
+Made friction off by default in every tab
 Moved viewport north in Work/Energy/Force graphs tab so all series controls are visible
 Limited to one firedog at a time.
 # 1.03.32 (34332) Aug 19, 2009
